// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Do not show tooltip if there is no content prop 1`] = `
<div>
  content
</div>
`;

exports[`side "bottom" render and update size 1`] = `
.c2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  margin-bottom: 0;
}

.c0 {
  position: relative;
}

.c1 {
  z-index: 100;
  pointer-events: none;
  opacity: 0;
  position: absolute;
  left: 50%;
  top: calc(8px + 0px);
  -webkit-transform: translateY(-25%) translateX(-50%);
  -ms-transform: translateY(-25%) translateX(-50%);
  transform: translateY(-25%) translateX(-50%);
  border-radius: 4px;
  padding: 4px 8px;
  background-color: #000000;
  color: #ffffff;
  white-space: nowrap;
  -webkit-transition: -webkit-transform 0.3s,opacity 0.3s;
  -webkit-transition: transform 0.3s,opacity 0.3s;
  transition: transform 0.3s,opacity 0.3s;
}

.c1:after {
  content: '';
  position: absolute;
  top: -12px;
  left: 50%;
  -webkit-transform: scaleY(0.5) translateY(-50%) translateX(-50%) rotateZ(0deg);
  -ms-transform: scaleY(0.5) translateY(-50%) translateX(-50%) rotateZ(0deg);
  transform: scaleY(0.5) translateY(-50%) translateX(-50%) rotateZ(0deg);
  border-left: 12px solid transparent;
  border-right: 12px solid transparent;
  border-bottom: calc(2 * 12px * 0.866) solid black;
  border-top: 12px solid transparent;
  display: inline-block;
}

<div>
  <div
    class="c0"
    data-testid="pbl-tooltip-wrapper"
  >
    <div
      class="c1"
      data-testid="pbl-tooltip-popover"
    >
      <p
        class="c2"
      >
        This is a tooltip on the bottom side
      </p>
    </div>
    content
  </div>
</div>
`;

exports[`side "left" render and update size 1`] = `
.c2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  margin-bottom: 0;
}

.c0 {
  position: relative;
}

.c1 {
  z-index: 100;
  pointer-events: none;
  opacity: 0;
  position: absolute;
  top: 50%;
  right: calc(8px + 0px);
  -webkit-transform: translateX(-25%) translateY(-50%);
  -ms-transform: translateX(-25%) translateY(-50%);
  transform: translateX(-25%) translateY(-50%);
  border-radius: 4px;
  padding: 4px 8px;
  background-color: #000000;
  color: #ffffff;
  white-space: nowrap;
  -webkit-transition: -webkit-transform 0.3s,opacity 0.3s;
  -webkit-transition: transform 0.3s,opacity 0.3s;
  transition: transform 0.3s,opacity 0.3s;
}

.c1:after {
  content: '';
  position: absolute;
  right: -12px;
  top: 50%;
  -webkit-transform: scale(0.5) translateX(50%) translateY(-100%) rotateZ(90deg);
  -ms-transform: scale(0.5) translateX(50%) translateY(-100%) rotateZ(90deg);
  transform: scale(0.5) translateX(50%) translateY(-100%) rotateZ(90deg);
  border-left: 12px solid transparent;
  border-right: 12px solid transparent;
  border-bottom: calc(2 * 12px * 0.866) solid black;
  border-top: 12px solid transparent;
  display: inline-block;
}

<div>
  <div
    class="c0"
    data-testid="pbl-tooltip-wrapper"
  >
    <div
      class="c1"
      data-testid="pbl-tooltip-popover"
    >
      <p
        class="c2"
      >
        This is a tooltip on the left side
      </p>
    </div>
    content
  </div>
</div>
`;

exports[`side "right" render and update size 1`] = `
.c2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  margin-bottom: 0;
}

.c0 {
  position: relative;
}

.c1 {
  z-index: 100;
  pointer-events: none;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: calc(8px + 0px);
  -webkit-transform: translateX(25%) translateY(-50%);
  -ms-transform: translateX(25%) translateY(-50%);
  transform: translateX(25%) translateY(-50%);
  border-radius: 4px;
  padding: 4px 8px;
  background-color: #000000;
  color: #ffffff;
  white-space: nowrap;
  -webkit-transition: -webkit-transform 0.3s,opacity 0.3s;
  -webkit-transition: transform 0.3s,opacity 0.3s;
  transition: transform 0.3s,opacity 0.3s;
}

.c1:after {
  content: '';
  position: absolute;
  left: -12px;
  top: 50%;
  -webkit-transform: scale(0.5) translateX(-50%) translateY(-100%) rotateZ(270deg);
  -ms-transform: scale(0.5) translateX(-50%) translateY(-100%) rotateZ(270deg);
  transform: scale(0.5) translateX(-50%) translateY(-100%) rotateZ(270deg);
  border-left: 12px solid transparent;
  border-right: 12px solid transparent;
  border-bottom: calc(2 * 12px * 0.866) solid black;
  border-top: 12px solid transparent;
  display: inline-block;
}

<div>
  <div
    class="c0"
    data-testid="pbl-tooltip-wrapper"
  >
    <div
      class="c1"
      data-testid="pbl-tooltip-popover"
    >
      <p
        class="c2"
      >
        This is a tooltip on the right side
      </p>
    </div>
    content
  </div>
</div>
`;

exports[`side "top" render and update size 1`] = `
.c2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  margin-bottom: 0;
}

.c0 {
  position: relative;
}

.c1 {
  z-index: 100;
  pointer-events: none;
  opacity: 0;
  position: absolute;
  left: 50%;
  bottom: calc(8px + 0px);
  -webkit-transform: translateY(25%) translateX(-50%);
  -ms-transform: translateY(25%) translateX(-50%);
  transform: translateY(25%) translateX(-50%);
  border-radius: 4px;
  padding: 4px 8px;
  background-color: #000000;
  color: #ffffff;
  white-space: nowrap;
  -webkit-transition: -webkit-transform 0.3s,opacity 0.3s;
  -webkit-transition: transform 0.3s,opacity 0.3s;
  transition: transform 0.3s,opacity 0.3s;
}

.c1:after {
  content: '';
  position: absolute;
  left: 50%;
  -webkit-transform: scaleY(0.5) translateY(-50%) translateX(-50%) rotateZ(180deg);
  -ms-transform: scaleY(0.5) translateY(-50%) translateX(-50%) rotateZ(180deg);
  transform: scaleY(0.5) translateY(-50%) translateX(-50%) rotateZ(180deg);
  border-left: 12px solid transparent;
  border-right: 12px solid transparent;
  border-bottom: calc(2 * 12px * 0.866) solid black;
  border-top: 12px solid transparent;
  display: inline-block;
}

<div>
  <div
    class="c0"
    data-testid="pbl-tooltip-wrapper"
  >
    <div
      class="c1"
      data-testid="pbl-tooltip-popover"
    >
      <p
        class="c2"
      >
        This is a tooltip on the top side
      </p>
    </div>
    content
  </div>
</div>
`;
